# EpixNet

./: .gitignore  .gitleaks.toml  .semgrepignore  .travis.yml  BUILDING.md  Cargo.toml  INSTALLER_SETUP.md  LICENSE  README.md  bootstrap.url  build-installer.bat  build-installer.sh  build.py  deny.toml  epixnet.py  epixnet.spec  greet.py  installer.nsi  osv-scanner.toml  pyi_rth_open_browser.py  requirements.txt  sonar-project.properties  start-venv.sh  termux.sh  update.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/workflows/: build-installers.yml  build.yml  ci.yml  codeql.yml  release.yml  security.yml  sonarcloud.yml  tests.yml
crates/epix-browser/: Cargo.toml  build.rs
crates/epix-browser/src/: autostart.rs  ca.rs  eepsite.rs  ext.rs  icon.rs  ipc.rs  main.rs  proxy.rs  tray.rs
crates/epix-bt/: Cargo.toml
crates/epix-bt/src/: bencode.rs  dht.rs  engine.rs  http.rs  lib.rs  magnet.rs  metainfo.rs  peer.rs  store.rs  swarm.rs  webseed.rs
crates/epix-bt/tests/: peer_loopback.rs  stream_tears.rs
crates/epix-build/: Cargo.toml
crates/epix-chain/: Cargo.toml
crates/epix-chain/src/: attestation.rs  lib.rs  merkle.rs  resolver.rs  types.rs  vrf.rs
crates/epix-chain/tests/: live.rs
crates/epix-content/: Cargo.toml
crates/epix-content/src/: canonical.rs  diff.rs  lib.rs  merge.rs  record.rs  verify.rs
crates/epix-content/tests/: content_vectors.json  differential.rs
crates/epix-core/: Cargo.toml
crates/epix-core/src/: address.rs  emitter.rs  error.rs  lib.rs  peer.rs  time.rs
crates/epix-crypt/: Cargo.toml
crates/epix-crypt/src/: ecies.rs  lib.rs
crates/epix-crypt/tests/: byteid.rs  differential.rs  vectors.json
crates/epix-db/: Cargo.toml
crates/epix-db/src/: content_db.rs  lib.rs  populate.rs  schema.rs
crates/epix-dht/: Cargo.toml
crates/epix-dht-net/: Cargo.toml
crates/epix-dht-net/src/: client.rs  lib.rs  service.rs  wire.rs
crates/epix-dht-net/tests/: wire_net.rs
crates/epix-dht/src/: id.rs  lib.rs  node.rs  routing.rs  rpc.rs  store.rs
crates/epix-dht/tests/: network.rs
crates/epix-discovery/: Cargo.toml
crates/epix-discovery/examples/: bt_probe.rs
crates/epix-discovery/src/: bittorrent.rs  lib.rs  tracker.rs
crates/epix-discovery/tests/: integration.rs
crates/epix-ffi/: Cargo.toml  build.rs
crates/epix-ffi/src/: lib.rs
crates/epix-i2p/: Cargo.toml
crates/epix-i2p/src/: eepsite.rs  lib.rs  router.rs
crates/epix-i2p/tests/: embedded_bootstrap.rs
crates/epix-nmh/: Cargo.toml
crates/epix-nmh/src/: ledger.rs  lib.rs  main.rs
crates/epix-node/: Cargo.toml
crates/epix-node/src/: lib.rs
crates/epix-peer/: Cargo.toml
crates/epix-plugin/: Cargo.toml
crates/epix-plugin/src/: lib.rs
crates/epix-plugins/: Cargo.toml  README.md
crates/epix-plugins/media/sidebar/: all.css  all.js
crates/epix-plugins/media/sidebar/globe/: all.js  globe.js
crates/epix-plugins/src/: beacon.rs  lib.rs  sidebar.rs
crates/epix-propagation/: Cargo.toml
crates/epix-propagation/src/: lib.rs
crates/epix-propagation/tests/: mesh_propagation.rs  store_and_forward.rs
crates/epix-protocol/: Cargo.toml
crates/epix-protocol/src/: advert.rs  connection.rs  lib.rs  msg.rs  registry.rs  server.rs
crates/epix-protocol/tests/: integration.rs
crates/epix-reticulum/: Cargo.toml
crates/epix-reticulum/src/: lib.rs  node.rs  server.rs  transport.rs
crates/epix-reticulum/tests/: mesh.rs  serve.rs  transport.rs
crates/epix-runtime/: Cargo.toml
crates/epix-runtime/examples/: interop_push.rs  pex_probe.rs
crates/epix-runtime/src/: handler.rs  lib.rs  local.rs  portcheck.rs
crates/epix-runtime/tests/: propagation.rs  resync.rs  seeding.rs
crates/epix-server/: Cargo.toml  build.rs
crates/epix-server/assets/: GEOIP-ATTRIBUTION.txt
crates/epix-server/src/: actions.rs  main.rs  platform.rs
crates/epix-tor/: Cargo.toml
crates/epix-tor/src/: bridges.rs  lib.rs
crates/epix-transport/: Cargo.toml
crates/epix-transport/src/: lib.rs
crates/epix-ui/: Cargo.toml
crates/epix-ui/src/: backup.rs  benchmark.rs  chart.rs  command.rs  conn_pool.rs  fileserve.rs  geoip.rs  lib.rs  paths.rs  state.rs  tracker.rs  uipassword.rs
crates/epix-ui/tests/: bigfile.rs  integration.rs  merged_serving.rs  mesh_sync.rs  optional_help.rs  plugin_gating.rs  publish_roundtrip.rs  routes_polish.rs  sites_persistence.rs  stream_file.rs  ui_security.rs  ws_commands.rs
crates/epix-user/: Cargo.toml
crates/epix-user/src/: lib.rs
crates/epix-worker/: Cargo.toml
crates/epix-worker/src/: lib.rs
crates/epix-worker/tests/: integration.rs
crates/epix-xite/: Cargo.toml
crates/epix-xite/src/: announcer.rs  hashfield.rs  lib.rs  piecefield.rs  piecemap.rs  settings.rs  storage.rs  xite.rs
crates/iptproxy-sys/: Cargo.toml  build.rs
crates/iptproxy-sys/src/: lib.rs
crates/reticulum-spike/: Cargo.toml
crates/reticulum-spike/src/: main.rs
crates/wire-spike/: Cargo.toml
crates/xid-spike/: Cargo.toml
docker/: Dockerfile  debian.Dockerfile  docker-compose.yml  nginx-gateway.conf  znctor.Dockerfile
docs/: deferred-status.md  ios-secure-context-spike.md  python-interop.md  sync-hardening.md  tor-tail.md
docs/install/: android.md  ios.md  linux.md  macos.md  windows.md
ios/: README.md  build-rust.sh
ios/EpixNet/: App.swift  Info.plist
ios/EpixNet.xcodeproj/: project.pbxproj
packaging/: RELEASING.md  fetch-firefox-esr.sh
packaging/linux/: build-linux.sh
packaging/macos/: AppIcon.icns  build-app.sh  dmg-background.tiff  make-dmg-background.swift  make-icon.sh
packaging/windows/: README.md  build-windows.sh  installer.nsi
plugins/AnnounceBitTorrent/: AnnounceBitTorrentPlugin.py
plugins/AnnounceLocal/: AnnounceLocalPlugin.py  BroadcastServer.py
plugins/AnnounceShare/: AnnounceSharePlugin.py
plugins/AnnounceZero/: plugin_info.json
plugins/Benchmark/: BenchmarkPlugin.py  plugin_info.json
scripts/: clean-build-cache.sh  run-browser.sh
shells/: README.md  wallet-ext.rev
src/: Actions.py  Config.py  buildinfo.py  main.py
src/Db/: Db.py
ui/: wrapper.html
(+155 files in other folders)
