[workspace]
resolver = "2"
# The desktop shell needs the Tauri toolchain, so it is its own package built
# via `cargo tauri`, not part of the engine workspace.
exclude = ["shells/desktop/src-tauri"]
members = ["crates/epix-core", "crates/epix-crypt", "crates/epix-db", "crates/epix-content", "crates/epix-transport", "crates/epix-protocol", "crates/epix-discovery", "crates/epix-xite", "crates/epix-worker", "crates/epix-ui", "crates/epix-server", "crates/epix-chain", "crates/epix-dht", "crates/epix-dht-net", "crates/epix-reticulum", "crates/epix-propagation", "crates/epix-runtime", "crates/epix-user", "crates/epix-peer", "crates/epix-plugin", "crates/epix-plugins", "crates/epix-tor", "crates/epix-node", "crates/epix-ffi", "crates/wire-spike", "crates/xid-spike", "crates/reticulum-spike"]
