[package]
name = "epix-browser"
version = "0.1.0"
edition = "2021"
description = "The Epix desktop browser: launches Firefox with a managed profile that routes .epix through the embedded node, so typing dashboard.epix loads the xite."

[[bin]]
name = "epix-browser"
path = "src/main.rs"

[dependencies]
epix-node = { path = "../epix-node" }
epix-ui = { path = "../epix-ui" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "io-util"] }
# Secure origins: a per-install local CA that signs on-the-fly leaf certs for
# `*.epix`, so Firefox loads `https://dashboard.epix/` as a real secure context.
rcgen = "0.13"
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "server-auto", "tokio", "service"] }
tower = { version = "0.5", features = ["util"] }
axum = "0.7"
serde_json = "1"
# The bundled WebExtension is embedded and written out as an XPI into the
# managed profile at launch.
include_dir = "0.7"
zip = { version = "2", default-features = false, features = ["deflate"] }

# Windows: register the native-messaging host via the registry.
[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[features]
default = ["tor"]
tor = ["epix-node/tor"]
