[package]
name = "epix-browser"
version = "0.1.0"
edition = "2021"
description = "The Epix desktop browser: launches Firefox with a managed profile that routes .epix through the embedded node, so typing dashboard.epix loads the xite."

[[bin]]
name = "epix-browser"
path = "src/main.rs"

[dependencies]
epix-node = { path = "../epix-node" }
epix-ui = { path = "../epix-ui" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "io-util"] }
# Secure origins: a per-install local CA that signs on-the-fly leaf certs for
# `*.epix`, so Firefox loads `https://dashboard.epix/` as a real secure context.
rcgen = "0.14"
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "server-auto", "tokio", "service"] }
tower = { version = "0.5", features = ["util"] }
axum = "0.7"
serde_json = "1"
# The bundled WebExtension is embedded and written out as an XPI into the
# managed profile at launch.
include_dir = "0.7"
zip = { version = "8", default-features = false, features = ["deflate"] }
# Desktop system tray (macOS menu bar / Windows notification area / Linux
# StatusNotifier-AppIndicator). Keeps the node's stats visible while it runs in
# the background after the browser window closes. `tao` owns the main-thread
# event loop the tray needs; `image` decodes the embedded PNG icon. All
# best-effort - the launcher falls back to no-tray when the host can't show one.
tray-icon = "0.19"
muda = "0.15"
tao = "0.30"
image = { version = "0.25", default-features = false, features = ["png"] }

# Windows: register the native-messaging host via the registry.
[target.'cfg(windows)'.dependencies]
winreg = "0.52"

# build.rs downloads the prebuilt wallet extension (the epix-wallet repo's
# wallet-dist release) into shells/wallet-ext when it is not staged locally.
[build-dependencies]
epix-build = { path = "../epix-build" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
zip = { version = "8", default-features = false, features = ["deflate"] }

# Windows: embed packaging/windows/app.ico in the exe (Explorer, taskbar).
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[features]
default = ["tor"]
tor = ["epix-node/tor"]
