[package]
name = "epix-chain"
version = "0.1.0"
edition = "2021"
description = "Epix chain layer: chain-verified .epix name resolution (XidResolver) via Merkle proof + validator finality."

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "socks"] }
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
