[package]
name = "epix-core"
version = "0.1.0"
edition = "2021"
description = "EpixNet core domain types + the UI-agnostic Emitter trait. No platform/UI deps."

[dependencies]
epix-crypt = { path = "../epix-crypt" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
hex = "0.4"
data-encoding = "2"
