[package]
name = "epix-crypt"
version = "0.1.0"
edition = "2021"
description = "EpixNet cryptography: epix1 addresses (Keccak256+bech32), recoverable secp256k1 signatures, custom HD derivation. Bit-for-bit compatible with CryptEpix.py."

[dependencies]
k256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }
sha2 = "0.10"
sha3 = "0.10"
hmac = "0.12"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
bech32 = "0.9"
bs58 = { version = "0.5", features = ["check"] }
base64 = "0.22"
hex = "0.4"
getrandom = "0.2"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
