[package]
name = "epix-db"
version = "0.1.0"
edition = "2021"
description = "EpixNet storage: pooled SQLite, per-xite schema from dbschema.json, and the global ContentDb."

[dependencies]
epix-core = { path = "../epix-core" }
epix-content = { path = "../epix-content" }
rusqlite = { version = "0.37", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[dev-dependencies]
tempfile = "3"
