[package]
name = "epix-dht"
version = "0.1.0"
edition = "2021"
description = "A private Kademlia DHT over epix-transport: the censorship-resistant site->peers lookup backbone."

[dependencies]
epix-core = { path = "../epix-core" }
async-trait = "0.1"
sha2 = "0.11"
hex = "0.4"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
