[package]
name = "epix-i2p"
version = "0.1.0"
edition = "2021"
description = "I2P transport: dial + host peers over I2P, with an embedded pure-Rust router (emissary) or an external one, via the SAMv3 bridge (yosemite)."

[dependencies]
epix-core = { path = "../epix-core" }
epix-transport = { path = "../epix-transport" }
# SAMv3 client - the same regardless of which router backs it.
yosemite = "0.7"
# Embedded pure-Rust I2P router (the no-sidecar default). Optional so a build
# can drop it and use only an external router.
emissary-core = { version = "0.4", optional = true }
emissary-util = { version = "0.4", optional = true }
tokio = { version = "1", features = ["rt", "sync", "time", "net", "macros"] }
async-trait = "0.1"
tracing = "0.1"

[features]
default = ["embedded"]
# Compile the embedded emissary router in. Without it, only External mode works.
embedded = ["dep:emissary-core", "dep:emissary-util"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
