[package]
name = "epix-i2p"
version = "0.1.0"
edition = "2021"
description = "I2P transport: dial + host peers over I2P, with an embedded pure-Rust router (emissary) or an external one, via the SAMv3 bridge (yosemite)."

[dependencies]
epix-core = { path = "../epix-core" }
epix-transport = { path = "../epix-transport" }
# SAMv3 client - the same regardless of which router backs it.
yosemite = "0.7"
# Embedded pure-Rust I2P router (the no-sidecar default). Optional so a build
# can drop it and use only an external router. We use our fork of emissary
# (EpixZone/emissary, branch v0.4.0-rustls): it makes the reseeder's TLS
# pluggable so `rustls` replaces OpenSSL and the router cross-compiles to
# Android/iOS. Pinned to a rev for reproducibility.
emissary-core = { git = "https://github.com/EpixZone/emissary", rev = "3916e0f1d091929baa4d524ee5963fffb56880b3", optional = true, features = ["events"] }
emissary-util = { git = "https://github.com/EpixZone/emissary", rev = "3916e0f1d091929baa4d524ee5963fffb56880b3", optional = true, default-features = false, features = ["tokio", "rustls"] }
tokio = { version = "1", features = ["rt", "sync", "time", "net", "macros"] }
async-trait = "0.1"
tracing = "0.1"
# For the .b32.i2p short address: sha256(destination) then base32.
sha2 = "0.10"
data-encoding = "2"

[features]
default = ["embedded"]
# Compile the embedded emissary router in. Without it, only External mode works.
embedded = ["dep:emissary-core", "dep:emissary-util"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
