[package]
name = "epix-nmh"
version = "0.1.0"
edition = "2021"
description = "Native-messaging host for the Epix browser extension: length-prefixed JSON over stdio, bridging the extension to name resolution and browser settings."

[[bin]]
name = "epix-nmh"
path = "src/main.rs"

[dependencies]
epix-node = { path = "../epix-node", default-features = false }
epix-chain = { path = "../epix-chain" }
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
# Ledger hardware wallet over HID: Firefox/GeckoView/WKWebView have no
# WebHID/WebUSB, so the wallet bridges APDUs to this host, which talks to the
# device directly (the Ledger HID framing is in src/ledger.rs).
hidapi = "2"

[dev-dependencies]
tempfile = "3"
