[package]
name = "epix-node"
version = "0.3.0"
edition = "2021"
description = "Embeddable Epix node: resolve a .epix name, clone + verify the xite, and serve the UI, reused by the server binary, the FFI layer, and the shells."

[dependencies]
epix-core = { path = "../epix-core" }
epix-transport = { path = "../epix-transport" }
epix-protocol = { path = "../epix-protocol" }
epix-xite = { path = "../epix-xite" }
epix-content = { path = "../epix-content" }
epix-worker = { path = "../epix-worker" }
epix-ui = { path = "../epix-ui" }
epix-chain = { path = "../epix-chain" }
epix-plugin = { path = "../epix-plugin" }
epix-plugins = { path = "../epix-plugins" }
epix-runtime = { path = "../epix-runtime" }
tokio = { version = "1", features = ["rt", "macros", "sync"] }
serde_json = "1"
async-trait = "0.1"

[features]
default = ["tor", "i2p-embedded", "mesh"]
tor = ["epix-runtime/tor"]
i2p = ["epix-runtime/i2p"]
mesh = ["epix-runtime/mesh"]
# i2p-embedded implies i2p, so the node's own #[cfg(feature = "i2p")] code
# (config read, RuntimeConfig field) is compiled, not just the runtime's.
i2p-embedded = ["i2p", "epix-runtime/i2p-embedded"]
# Auto-enable the embedded router on first run (privacy by default). Both
# desktop and mobile turn this on - the router is a leaf (no transit, no
# floodfill), so its footprint is Tor-client-like. A build can drop this
# feature to compile the router in but leave it opt-in.
i2p-autostart = ["i2p-embedded"]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
