[package]
name = "epix-node"
version = "0.3.0"
edition = "2021"
description = "Embeddable Epix node: resolve a .epix name, clone + verify the xite, and serve the UI, reused by the server binary, the FFI layer, and the shells."

[dependencies]
epix-core = { path = "../epix-core" }
epix-transport = { path = "../epix-transport" }
epix-protocol = { path = "../epix-protocol" }
epix-xite = { path = "../epix-xite" }
epix-content = { path = "../epix-content" }
epix-worker = { path = "../epix-worker" }
epix-ui = { path = "../epix-ui" }
epix-chain = { path = "../epix-chain" }
epix-plugin = { path = "../epix-plugin" }
epix-plugins = { path = "../epix-plugins" }
# default-features = false so a download-only embedder (the mobile FFI) does
# NOT pull the runtime's inbound-seeding / local-discovery loops just by
# depending on the node. Each is re-exposed as a node feature below and put in
# the node default, so desktop/server (which take the node default, or opt in
# explicitly) keep them.
epix-runtime = { path = "../epix-runtime", default-features = false }
tokio = { version = "1", features = ["rt", "macros", "sync"] }
serde_json = "1"
async-trait = "0.1"

[features]
default = ["tor", "i2p-embedded", "mesh", "inbound-seeding", "local-discovery"]
tor = ["epix-runtime/tor"]
i2p = ["epix-runtime/i2p"]
mesh = ["epix-runtime/mesh"]
# BitTorrent bridge (desktop + Android). NOT in the mobile FFI default; the
# Android build turns it on explicitly, the iOS build never passes it, so the
# iOS binary contains no BT code (App Store 5.2.3). Forwards to epix-ui so the
# `serverInfo.bittorrent` capability bit reflects this build.
bittorrent = ["epix-runtime/bittorrent", "epix-ui/bittorrent"]
# Inbound file server + UPnP port mapping. A phone should not accept inbound
# clearnet connections or poke the router, so the mobile FFI leaves this off
# (it stays reachable over its onion/i2p service, which the `tor`/`i2p`
# features host independently).
inbound-seeding = ["epix-runtime/inbound-seeding"]
# LAN peer discovery over UDP broadcast. Off on mobile (no LAN-broadcast on a
# phone; it is battery/radio + a presence-leak with no benefit).
local-discovery = ["epix-runtime/local-discovery"]
# i2p-embedded implies i2p, so the node's own #[cfg(feature = "i2p")] code
# (config read, RuntimeConfig field) is compiled, not just the runtime's.
i2p-embedded = ["i2p", "epix-runtime/i2p-embedded"]
# Auto-enable the embedded router on first run (privacy by default). Both
# desktop and mobile turn this on - the router is a leaf (no transit, no
# floodfill), so its footprint is Tor-client-like. A build can drop this
# feature to compile the router in but leave it opt-in.
i2p-autostart = ["i2p-embedded"]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
