[package]
name = "epix-plugin"
version = "0.1.0"
edition = "2021"
description = "The plugin/hook system: a trait-based extension registry that replaces monkeypatching."

[dependencies]
epix-ui = { path = "../epix-ui" }

[dev-dependencies]
async-trait = "0.1"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
