[package]
name = "epix-propagation"
version = "0.1.0"
edition = "2021"
description = "In-process store-and-forward propagation of xite update notifications over the wire protocol (TCP or Reticulum mesh)."

[dependencies]
epix-core = { path = "../epix-core" }
epix-protocol = { path = "../epix-protocol" }
async-trait = "0.1"
rmpv = "1"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
epix-transport = { path = "../epix-transport" }
epix-reticulum = { path = "../epix-reticulum" }
reticulum = { git = "https://github.com/BeechatNetworkSystemsLtd/Reticulum-rs", rev = "dc4e03bb08a2069d03ba038bcc63eb9358201dd5" }
rand_core = { version = "0.6.4", features = ["getrandom"] }
tokio = { version = "1", features = ["full"] }
