[package]
name = "epix-reticulum"
version = "0.1.0"
edition = "2021"
description = "Reticulum mesh transport: a Link->PeerStream adapter so the wire protocol runs over LoRa/BLE/TCP mesh."

[dependencies]
epix-core = { path = "../epix-core" }
epix-transport = { path = "../epix-transport" }
epix-protocol = { path = "../epix-protocol" }
# Fetched by cargo like any registry package (no sibling checkout needed);
# pinned to a commit so builds reproduce.
reticulum = { git = "https://github.com/BeechatNetworkSystemsLtd/Reticulum-rs", rev = "dc4e03bb08a2069d03ba038bcc63eb9358201dd5" }
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt", "io-util", "macros", "time"] }

[dev-dependencies]
rand_core = { version = "0.6.4", features = ["getrandom"] }
rmpv = "1"
tokio = { version = "1", features = ["full"] }
