[package]
name = "epix-runtime"
version = "0.1.0"
edition = "2021"
description = "The persistent node runtime: supervised background loops (announce + re-sync) over the app state."

[dependencies]
epix-core = { path = "../epix-core" }
epix-ui = { path = "../epix-ui" }
epix-xite = { path = "../epix-xite" }
epix-discovery = { path = "../epix-discovery" }
epix-transport = { path = "../epix-transport" }
epix-protocol = { path = "../epix-protocol" }
epix-dht = { path = "../epix-dht" }
epix-dht-net = { path = "../epix-dht-net" }
epix-propagation = { path = "../epix-propagation" }
epix-tor = { path = "../epix-tor", optional = true }
epix-i2p = { path = "../epix-i2p", optional = true }
tokio = { version = "1", features = ["rt", "sync", "time", "macros", "net"] }
async-trait = "0.1"
serde_json = "1"
rmpv = "1"
socket2 = "0.5"
igd-next = { version = "0.16", features = ["aio_tokio"], optional = true }

[features]
default = ["local-discovery", "inbound-seeding"]
# LAN peer discovery over UDP broadcast (AnnounceLocal). Off on mobile.
local-discovery = []
# Inbound file server so peers can pull our files (seeding), plus UPnP port
# mapping so the fileserver port is reachable through a home router. Off on
# mobile, which should not accept inbound connections or poke router ports.
inbound-seeding = ["dep:igd-next"]
# In-process Tor (Arti): dial .onion peers, host an onion service for inbound,
# and a local SOCKS listener for the browser shells. On all platforms.
tor = ["dep:epix-tor"]
# In-process I2P (emissary embedded router or an external one): dial + host
# .b32.i2p peers, backgrounded so clearnet works while it boots.
i2p = ["dep:epix-i2p"]

[dev-dependencies]
epix-protocol = { path = "../epix-protocol" }
epix-crypt = { path = "../epix-crypt" }
epix-content = { path = "../epix-content" }
async-trait = "0.1"
rmpv = "1"
hex = "0.4"
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
