[package]
name = "epix-runtime"
version = "0.1.0"
edition = "2021"
description = "The persistent node runtime: supervised background loops (announce + re-sync) over the app state."

[dependencies]
epix-core = { path = "../epix-core" }
epix-ui = { path = "../epix-ui" }
epix-xite = { path = "../epix-xite" }
epix-discovery = { path = "../epix-discovery" }
epix-transport = { path = "../epix-transport" }
epix-protocol = { path = "../epix-protocol" }
epix-dht = { path = "../epix-dht" }
epix-dht-net = { path = "../epix-dht-net" }
epix-propagation = { path = "../epix-propagation" }
epix-tor = { path = "../epix-tor", optional = true }
epix-i2p = { path = "../epix-i2p", optional = true, default-features = false }
epix-reticulum = { path = "../epix-reticulum", optional = true }
epix-bt = { path = "../epix-bt", optional = true }
tokio = { version = "1", features = ["rt", "sync", "time", "macros", "net"] }
async-trait = "0.1"
serde_json = "1"
rmpv = "1"
socket2 = "0.6"
igd-next = { version = "0.17", features = ["aio_tokio"], optional = true }
# Dial-back port checking (the Python client's PeerPortchecker services).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }

[features]
default = ["local-discovery", "inbound-seeding"]
# LAN peer discovery over UDP broadcast (AnnounceLocal). Off on mobile.
local-discovery = []
# Inbound file server so peers can pull our files (seeding), plus UPnP port
# mapping so the fileserver port is reachable through a home router. Off on
# mobile, which should not accept inbound connections or poke router ports.
inbound-seeding = ["dep:igd-next", "dep:reqwest"]
# In-process Tor (Arti): dial .onion peers, host an onion service for inbound,
# and a local SOCKS listener for the browser shells. On all platforms.
tor = ["dep:epix-tor"]
# In-process Tor pluggable transports (Snowflake) for censored networks. Implies
# tor; forwards to epix-tor's bridges feature (which links IPtProxy).
bridges = ["tor", "epix-tor/bridges"]
# I2P support (External router mode): dial + host .b32.i2p peers via a running
# router's SAM bridge. Light - no embedded router, no reseeder. Mobile uses
# this.
i2p = ["dep:epix-i2p"]
# Adds the embedded pure-Rust I2P router (emissary) for the no-sidecar default.
# Pulls a reseeder (reqwest/openssl), so it's desktop-only for now. Off mobile.
i2p-embedded = ["i2p", "epix-i2p/embedded"]
# Reticulum mesh: dial + serve peers over mesh links (TCP interfaces now,
# LoRa/BLE radios later). All platforms.
mesh = ["dep:epix-reticulum"]
# BitTorrent bridge: stream open-licensed media referenced by magnet links
# (web seeds now; swarm/peer-wire next). Desktop and Android only - the iOS
# build omits this feature entirely (App Store 5.2.3: no general-purpose
# torrenting), so the `epix-bt` engine is absent from the iOS binary by
# construction. The node fetches through its own transport (Tor-routed), so no
# BT code ever runs in a xite page.
bittorrent = ["dep:epix-bt"]

[dev-dependencies]
epix-protocol = { path = "../epix-protocol" }
epix-crypt = { path = "../epix-crypt" }
epix-content = { path = "../epix-content" }
async-trait = "0.1"
rmpv = "1"
hex = "0.4"
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
