[package]
name = "epix-server"
version = "0.1.0"
edition = "2021"
description = "Runnable Epix node: clones a xite from the network and serves it in a browser."

[dependencies]
epix-core = { path = "../epix-core" }
epix-transport = { path = "../epix-transport" }
epix-protocol = { path = "../epix-protocol" }
epix-xite = { path = "../epix-xite" }
epix-worker = { path = "../epix-worker" }
epix-ui = { path = "../epix-ui" }
epix-chain = { path = "../epix-chain" }
epix-plugin = { path = "../epix-plugin" }
epix-plugins = { path = "../epix-plugins" }
epix-runtime = { path = "../epix-runtime" }
epix-tor = { path = "../epix-tor", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[features]
# Desktop bundles the auth/login plugins that a mobile build leaves off (the
# phone UI is already local to the device). Build a mobile node with
# `--no-default-features`.
default = ["desktop", "tor"]
desktop = ["epix-ui/ui-password", "epix-ui/multiuser", "epix-ui/benchmark"]
# In-process Tor (Arti): onion dialing + hosting + SOCKS listener for the shell.
tor = ["dep:epix-tor", "epix-runtime/tor"]
