[package]
name = "epix-server"
version = "0.1.0"
edition = "2021"
description = "Runnable Epix node: clones a xite from the network and serves it in a browser."

[dependencies]
epix-node = { path = "../epix-node", default-features = false }
epix-ui = { path = "../epix-ui" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[features]
# Desktop bundles the auth/login plugins that a mobile build leaves off (the
# phone UI is already local to the device). Build a mobile node with
# `--no-default-features`.
default = ["desktop", "tor", "i2p"]
desktop = ["epix-ui/ui-password", "epix-ui/multiuser", "epix-ui/benchmark"]
# In-process Tor (Arti): onion dialing + hosting + SOCKS listener for the shell.
tor = ["epix-node/tor"]
i2p = ["epix-node/i2p"]
